--- a/package.json
+++ b/package.json
@@ -1,24 +1,13 @@
 {
-  "name": "nexus:-искра-утраты",
+  "name": "nexus-iskra-utraty",
+  "version": "1.0.0",
+  "description": "Текстовая RPG в мире Нексуса, расколотом катаклизмом. Пока великие пантеоны ведут вечную войну, забытый бог Катарсис возвращается из небытия. Станьте Пробужденным и определите его судьбу в мире, отчаянно ищущем надежду.",
   "private": true,
-  "version": "0.0.0",
-  "type": "module",
-  "scripts": {
-    "dev": "vite",
-    "build": "vite build",
-    "preview": "vite preview"
-  },
   "dependencies": {
-    "react-dom": "^19.1.1",
     "@google/genai": "^1.17.0",
+    "idb": "^8.0.0",
     "react": "^19.1.1",
-    "react-window": "^1.8.10",
-    "idb": "^8.0.0"
-  },
-  "devDependencies": {
-    "@types/node": "^22.14.0",
-    "@vitejs/plugin-react": "^5.0.0",
-    "typescript": "~5.8.2",
-    "vite": "^6.2.0"
+    "react-dom": "^19.1.1",
+    "react-window": "^1.8.10"
   }
 }
